fix: Make area filter correctly work on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@ body {
   padding: 0;
 }
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 ul {
@@ -55,7 +55,7 @@ ul {
 }
 
 #tab_arrow {
-    transition: transform 1s;
+  transition: transform 1s;
 }
 
 .open {
@@ -64,4 +64,9 @@ ul {
 
 .rotate {
   transform: rotate(180deg) !important;
+}
+
+#neighbourhood_list {
+  height: 50vh;
+  overflow-y: auto;
 }
